--- a/Bilibili.yaml
+++ b/Bilibili.yaml
@@ -5,5 +5,5 @@ payload:
   - DOMAIN-SUFFIX,biliapi.com
   - DOMAIN-SUFFIX,biliapi.net
   - DOMAIN-SUFFIX,hdslb.com
-  - DOMAIN,api.bilibili.com
+  - DOMAIN-SUFFIX,bilibili.com
   - DOMAIN,upos-hz-mirrorakam.akamaized.net
